# msdfgen

./: .gitignore  .gitmodules  CMakeLists.txt
ext/: import-svg.cpp  save-png.cpp
lib/: lodepng.cpp
